# KeyNav

./: CMakeLists.txt  Current.md  Engine_initial.cpp  EvdevInput_initial.cpp  PHASE_1_REPORT.md  PHASE_2_REPORT.md  install_dependencies.sh  install_udev_rules.sh
assets/: keynav.desktop
src/: main.cpp
src/core/: Config.cpp  Config.h  Engine.cpp  Engine.h  Input.h  Logger.h  Overlay.h  Platform.h  Types.h
src/platform/linux/: EvdevInput.cpp  EvdevInput.h  WaylandOverlay.cpp  WaylandOverlay.h  X11Input.cpp  X11Input.h  X11Overlay.cpp  X11Overlay.h  X11Platform.cpp  X11Platform.h
tests/: EngineTest.cpp
